// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video Popup block saved block HTML shouldn't change 1`] = `
<div
  className="ugb-video-popup ugb-video-popup--v2 ugb-video-popup--design-design ugb-video-popup--button-outline ugb--background-opacity-2 ugb--has-background ugb--has-background-image ugb--shadow-1"
  data-video="videoID"
  style={
    Object {
      "--ugb-background-color": "#123456",
      "backgroundColor": "#123456",
      "backgroundImage": "url(backgroundImageURL)",
      "borderRadius": 6,
    }
  }
>
  <div
    className="ugb-video-popup__wrapper"
  >
    <a
      className="ugb-video-popup__overlay"
      href="#"
    />
    <span
      className="ugb-video-popup__play-button"
    >
      <div />
    </span>
  </div>
</div>
`;

exports[`Video Popup block saved default block HTML shouldn't change 1`] = `
<div
  className="ugb-video-popup ugb-video-popup--v2 ugb-video-popup--design-basic ugb-video-popup--button-normal ugb--background-opacity-5 ugb--has-background"
  style={
    Object {
      "--ugb-background-color": undefined,
      "backgroundColor": "#000000",
      "backgroundImage": undefined,
      "borderRadius": undefined,
    }
  }
>
  <div
    className="ugb-video-popup__wrapper"
  >
    <a
      className="ugb-video-popup__overlay"
      href="#"
    />
    <span
      className="ugb-video-popup__play-button"
    >
      <div />
    </span>
  </div>
</div>
`;
